[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/Bar.gd" type="Script" id=1]
[ext_resource path="res://assets/user interface/progressBar/musicbar-00.png" type="Texture" id=2]
[ext_resource path="res://assets/user interface/progressBar/musicbar-25.png" type="Texture" id=3]
[ext_resource path="res://assets/user interface/progressBar/musicbar-50.png" type="Texture" id=4]
[ext_resource path="res://assets/user interface/progressBar/musicbar-75.png" type="Texture" id=5]
[ext_resource path="res://assets/user interface/progressBar/musicbar-100.png" type="Texture" id=6]
[ext_resource path="res://assets/user interface/progressBar/energybar-100.png" type="Texture" id=7]
[ext_resource path="res://assets/user interface/progressBar/energybar-50.png" type="Texture" id=8]
[ext_resource path="res://assets/user interface/progressBar/energybar-75.png" type="Texture" id=9]
[ext_resource path="res://assets/user interface/progressBar/energybar-25.png" type="Texture" id=10]
[ext_resource path="res://assets/user interface/progressBar/energybar-00.png" type="Texture" id=11]
[ext_resource path="res://assets/Game Assets/Buttons/save-btn.png" type="Texture" id=12]
[ext_resource path="res://assets/Game Assets/Buttons/save-btn-pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/font/Pixellari.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/Game Assets/Environment/atlas_48x.png" type="Texture" id=15]
[ext_resource path="res://assets/user interface/dialogue/tile000.png" type="Texture" id=16]
[ext_resource path="res://assets/user interface/dialogue/tile001.png" type="Texture" id=17]
[ext_resource path="res://assets/user interface/dialogue/tile002.png" type="Texture" id=18]
[ext_resource path="res://assets/user interface/dialogue/tile004.png" type="Texture" id=19]
[ext_resource path="res://assets/user interface/dialogue/tile005.png" type="Texture" id=20]
[ext_resource path="res://assets/Game Assets/Assets v2/Badges/guitar-badge.png" type="Texture" id=21]
[ext_resource path="res://assets/Game Assets/Assets v2/Badges/mic-badge.png" type="Texture" id=22]
[ext_resource path="res://assets/Game Assets/Assets v2/Badges/piano-badge.png" type="Texture" id=23]
[ext_resource path="res://assets/Game Assets/Assets v2/Badges/music-badge.png" type="Texture" id=24]
[ext_resource path="res://scripts/Button.gd" type="Script" id=25]
[ext_resource path="res://assets/Game Assets/Icons/exit-icon-pressed.png" type="Texture" id=26]
[ext_resource path="res://assets/Game Assets/Icons/exit-icon.png" type="Texture" id=27]

[sub_resource type="TileSet" id=6]
0/name = "atlas_48x.png 0"
0/texture = ExtResource( 15 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 288, 48, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "atlas_48x.png 1"
1/texture = ExtResource( 15 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 672, 48, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "atlas_48x.png 2"
2/texture = ExtResource( 15 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 672, 48, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "atlas_48x.png 3"
3/texture = ExtResource( 15 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 624, 48, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "atlas_48x.png 4"
4/texture = ExtResource( 15 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 576, 48, 48 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "atlas_48x.png 5"
5/texture = ExtResource( 15 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 576, 48, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "atlas_48x.png 6"
6/texture = ExtResource( 15 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 528, 48, 48 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "atlas_48x.png 7"
7/texture = ExtResource( 15 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 48, 720, 48, 48 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "atlas_48x.png 8"
8/texture = ExtResource( 15 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 96, 720, 48, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "atlas_48x.png 9"
9/texture = ExtResource( 15 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1680, 432, 48, 48 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "atlas_48x.png 10"
10/texture = ExtResource( 15 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 96, 624, 48, 48 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "100",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "25",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "50",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "75",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "100",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "25",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "50",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "75",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Ui" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 107, 18.1407 )
scale = Vector2( 0.817274, 0.859558 )
tile_set = SubResource( 6 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -65536, 5, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, -65522, 6, 0, -65521, 6, 0, -65520, 6, 0, -65519, 6, 0, -65518, 6, 0, -65517, 6, 0, -65516, 536870917, 0, 0, 3, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 536870915, 0, 21, 9, 0, 65536, 7, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 536870919, 0, 65557, 9, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131085, 9, 0, 131086, 9, 0, 131087, 9, 0, 131088, 9, 0, 131089, 9, 0, 131090, 9, 0, 131091, 9, 0, 131092, 9, 0 )

[node name="expBar" type="AnimatedSprite" parent="."]
position = Vector2( 246, 39.1407 )
scale = Vector2( 0.406402, 0.406402 )
frames = SubResource( 1 )
animation = "100"
__meta__ = {
"_edit_group_": true
}

[node name="expText" type="RichTextLabel" parent="expBar"]
visible = false
margin_left = -103.076
margin_top = -103.077
margin_right = 72.9235
margin_bottom = -63.0766
rect_scale = Vector2( 4.84573, 5.35799 )
text = "100"

[node name="restBar" type="AnimatedSprite" parent="."]
position = Vector2( 434, 37.1407 )
scale = Vector2( 0.416204, 0.416204 )
frames = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="restText" type="RichTextLabel" parent="restBar"]
visible = false
margin_left = -95.1542
margin_top = -95.1542
margin_right = 80.8458
margin_bottom = -55.1542
rect_scale = Vector2( 4.84573, 5.35799 )
text = "100"

[node name="expLogo" type="Sprite" parent="."]

[node name="energyLogo" type="Sprite" parent="."]

[node name="DialogBox" type="AnimatedSprite" parent="."]
position = Vector2( 559.867, 455.57 )
scale = Vector2( 0.139186, 0.139186 )
frames = SubResource( 7 )
frame = 2
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="DialogBox"]
position = Vector2( 1.007, 1 )
scale = Vector2( 0.999407, 0.93211 )
frames = SubResource( 8 )
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 466.0
margin_right = 824.0
margin_bottom = 530.0
custom_colors/default_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/normal_font = SubResource( 5 )
visible_characters = 999
tab_size = 11
fit_content_height = true

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( 1.52588e-05, 3.8147e-06 )
tile_set = SubResource( 6 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -65535, 9, 0, -65534, 9, 0, 0, 536870921, 0, 1, 536870921, 0, 2, 536870921, 0, 3, 536870921, 0, 4, 536870921, 0, 5, 536870921, 0, 6, 536870921, 0, 7, 536870921, 0, 8, 536870921, 0, 9, 536870921, 0, 10, 536870921, 0, 11, 536870921, 0, 12, 536870921, 0, 13, 536870921, 0, 14, 536870921, 0, 15, 536870921, 0, 16, 536870921, 0, 17, 536870921, 0, 18, 536870921, 0, 19, 536870921, 0, 20, 536870921, 0, 21, 536870921, 0, 65536, 536870921, 0, 65537, 536870921, 0, 65538, 536870921, 0, 65539, 536870921, 0, 65540, 536870921, 0, 65541, 536870921, 0, 65542, 536870921, 0, 65543, 536870921, 0, 65544, 536870921, 0, 65545, 536870921, 0, 65546, 536870921, 0, 65547, 536870921, 0, 65548, 536870921, 0, 65549, 536870921, 0, 65550, 536870921, 0, 65551, 536870921, 0, 65552, 536870921, 0, 65553, 536870921, 0, 65554, 536870921, 0, 65555, 536870921, 0, 65556, 536870921, 0, 65557, 536870921, 0, 131072, 536870921, 0, 131073, 536870921, 0, 131074, 536870921, 0, 131075, 536870921, 0, 131076, 536870921, 0, 131077, 536870921, 0, 131078, 536870921, 0, 131079, 536870921, 0, 131080, 536870921, 0, 131081, 536870921, 0, 131082, 536870921, 0, 131083, 536870921, 0, 131084, 536870921, 0, 131085, 536870921, 0, 131086, 536870921, 0, 131087, 536870921, 0, 131088, 536870921, 0, 131089, 536870921, 0, 131090, 536870921, 0, 131091, 536870921, 0, 131092, 536870921, 0, 196608, 536870921, 0, 196609, 536870921, 0, 196610, 536870921, 0, 196611, 536870921, 0, 196612, 536870921, 0, 196613, 536870921, 0, 196614, 536870921, 0, 196615, 536870921, 0, 196616, 536870921, 0, 196617, 536870921, 0, 196618, 536870921, 0, 196619, 536870921, 0, 196620, 536870921, 0, 196621, 536870921, 0, 196622, 536870921, 0, 196623, 536870921, 0, 196624, 536870921, 0, 196625, 536870921, 0, 196626, 536870921, 0, 196627, 536870921, 0, 196628, 536870921, 0, 262153, 536870921, 0, 262154, 536870921, 0, 327690, 536870921, 0, 393226, 536870921, 0, 458762, 536870921, 0, 524298, 536870921, 0, 589832, 536870921, 0, 589833, 536870921, 0, 589834, 536870921, 0, 589835, 536870921, 0, 655368, 536870921, 0, 655369, 536870921, 0, 655371, 536870921, 0, 655372, 536870921, 0 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 299.0
margin_top = 409.0
margin_right = 499.0
margin_bottom = 434.0
custom_colors/default_color = Color( 0.113725, 0.32549, 0.533333, 1 )
custom_fonts/normal_font = SubResource( 4 )

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 331.0
margin_top = 528.0
margin_right = 709.0
margin_bottom = 553.0
custom_colors/default_color = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/normal_font = SubResource( 4 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 783.0
margin_top = 18.1407
margin_right = 887.0
margin_bottom = 58.1407
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true
script = ExtResource( 25 )

[node name="guitar" type="Sprite" parent="."]
position = Vector2( 552, 38 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 21 )

[node name="piano" type="Sprite" parent="."]
position = Vector2( 578, 38 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 23 )

[node name="vocal" type="Sprite" parent="."]
position = Vector2( 603, 38 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 22 )

[node name="music" type="Sprite" parent="."]
position = Vector2( 627, 38 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 24 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 747.0
margin_top = 18.0
margin_right = 788.0
margin_bottom = 59.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 26 )
expand = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
